# guitar-notes

./: .gitignore  Cargo.toml  LICENSE  guitar_notes.d.ts  guitar_notes.js  guitar_notes_bg.wasm.d.ts  index.html  readme.md  serve-wasm.ps1
.cargo/: config.toml
.github/workflows/: build-wasm.yml  deploy.yml
src/: lib.rs  main.rs  music.rs
tests/: music.rs
www/: _headers  index.html
