[package]
name = "guitar-notes"
version = "0.1.0"
edition = "2024"

[lib]
name = "guitar_notes"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.19.0", features = ["webgl2"] }
rodio = "0.22"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# getrandom's wasm_js/js backends must NOT be enabled for native targets
# (compile_error on Windows/Linux/macOS). Activate only for wasm builds.
[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[[bin]]
name = "guitar-notes"
path = "src/main.rs"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"